--- a/package.json
+++ b/package.json
@@ -3,18 +3,18 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www.js"
   },
   "dependencies": {
-    "body-parser": "~1.15.1",
-    "bootstrap": "^3.3.7",
-    "cookie-parser": "~1.4.3",
-    "debug": "~2.2.0",
-    "dotenv": "^6.0.0",
-    "express": "~4.13.4",
-    "jade": "~1.11.0",
-    "morgan": "~1.7.0",
-    "rpio": "^0.9.12",
-    "serve-favicon": "~2.3.0"
+    "body-parser": "~1.19.2",
+    "bootstrap": "^5.1.3",
+    "cookie-parser": "~1.4.6",
+    "debug": "~4.3.3",
+    "dotenv": "^16.0.0",
+    "express": "~4.17.3",
+    "morgan": "~1.10.0",
+    "pug": "^3.0.2",
+    "rpio": "^2.4.2",
+    "serve-favicon": "~2.5.0"
   }
 }
